--- a/views/partials/phone.ejs
+++ b/views/partials/phone.ejs
@@ -26,13 +26,13 @@
         }
         .phone {
             height: 98vh;
-            width: 25vw;
+            width: 23vw;
             background: #fff;
             border-radius: 56px;
 
             padding-top: 12vh;
-            padding-left: 2.5vw;
-            padding-right: 2.5vw;
+            padding-left: 5.5vh;
+            padding-right: 5.5vh;
 
             position: relative;
 
