--- a/views/partials/phone.ejs
+++ b/views/partials/phone.ejs
@@ -26,7 +26,7 @@
         }
         .phone {
             height: 98vh;
-            width: 23vw;
+            width: 45vh;
             background: #fff;
             border-radius: 56px;
 
